syntax = "proto3";
package pb;

import "google/protobuf/timestamp.proto";

service Live {
    rpc Get(GetLiveRequest) returns (GetLiveResponse);
    rpc GetTotal(GetTotalLiveRequest) returns (GetTotalLiveResponse);
    rpc FindMultiple(FindMultipleLiveRequest) returns (FindMultipleLiveResponse);
    rpc FindUser(FindUserLiveRequest) returns (FindUserLiveResponse);
    rpc Add(AddLiveRequest) returns (AddLiveResponse);
    rpc Remove(RemoveLiveRequest) returns (RemoveLiveResponse);
}

message GetLiveRequest {
    uint64 match_id = 1;
}

message GetLiveResponse {
    uint64 match_id = 1;
    TeamLiveInfo team1 = 2;
    TeamLiveInfo team2 = 3;
    google.protobuf.Timestamp start_time = 4;
}

message FindMultipleLiveRequest {
    uint32 total = 1;
    uint32 rating_under = 2;
    uint32 rating_over = 3;
}

message FindMultipleLiveResponse {
    repeated GetLiveResponse matches = 1;
}

message FindUserLiveRequest {
    uint64 user_id = 1;
}

message FindUserLiveResponse {
    uint64 user_id = 1;
    uint64 match_id = 2;
}

message GetTotalLiveRequest {}

message GetTotalLiveResponse {
    uint64 total = 1;
}

message TeamLiveInfo {
    repeated uint64 users = 1;
    uint32 score = 2;
    uint64 average_rating = 3;
}

message AddLiveRequest {
    uint64 match_id = 1;
    TeamLiveInfo team1 = 2;
    TeamLiveInfo team2 = 3;
    google.protobuf.Timestamp start_time = 4;
}

message AddLiveResponse {}

message RemoveLiveRequest {
    uint64 match_id = 1;
}

message RemoveLiveResponse {}